Importert bilder og video. Og lagt til noen komponenter til hjemmesiden

--- a/CabinFeverReact/CabinFeverReact.csproj
+++ b/CabinFeverReact/CabinFeverReact.csproj
@@ -25,6 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\components\Banner\" />
+    <Folder Include="ClientApp\src\components\Carousel\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
