Lagt til komponenter for hjemmesiden. Hjemmesiden er tom, men applikasjonen kjører.

--- a/CabinFeverReact/CabinFeverReact.csproj
+++ b/CabinFeverReact/CabinFeverReact.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="ClientApp\src\components\Banner\" />
     <Folder Include="ClientApp\src\components\Carousel\" />
+    <Folder Include="ClientApp\src\components\Welcome\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
