--- a/CabinFeverReact/CabinFeverReact.csproj
+++ b/CabinFeverReact/CabinFeverReact.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\components\services\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
