Forsøkt å lage siden til hver item, men tror data ikke hentes riktig fra databasen, så innhold vises ikke.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react-bootstrap": "^2.9.1",
+    "react-router-dom": "^6.19.0",
+    "switch": "^0.0.0",
     "yarn": "^1.22.19"
   }
 }
