Konfigurasjon for å få MinSide til å ta imot ordre

--- a/CabinFeverReact/ClientApp/package.json
+++ b/CabinFeverReact/ClientApp/package.json
@@ -2,6 +2,7 @@
   "name": "cabinfeverreact",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:7248",
   "dependencies": {
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
