Jobbet videre med innlogging og registrering. Lagt til authentication også. Tror jeg ikke er langt unna mål.

--- a/CabinFeverReact/appsettings.json
+++ b/CabinFeverReact/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ItemDbContextConnection": "Data Source=ItemDatabase.db"
+  },
+  "Jwt": {
+    "Key": "05ba55bd-92b4-432d-8a1f-1cab1e3d688f",
+    "Issuer": "https://localhost:7248",
+    "Audience": "https://localhost:7248"
   }
 }
