--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "react-bootstrap": "^2.9.1",
     "react-router-dom": "^6.19.0",
     "switch": "^0.0.0",
