create validating og testing funker

--- a/XunitTestCabinFeverReact/XunitTestCabinFeverReact.csproj
+++ b/XunitTestCabinFeverReact/XunitTestCabinFeverReact.csproj
@@ -20,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Moq.EntityFrameworkCore" Version="7.0.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
   </ItemGroup>
 
   <ItemGroup>
